--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -19,11 +19,6 @@ mat-card {
                 flex-shrink: 1;
                 align-items: center;
                 justify-content: center;
-
-                img {
-                    max-width: 300px;
-                    max-height: 200px;
-                }
             }
 
             .dates {
