--- a/src/app/components/static/static.component.scss
+++ b/src/app/components/static/static.component.scss
@@ -6,10 +6,3 @@ a {
 p {
     max-width: none
 }
-
-img {
-    width: auto;
-    height: 48px;
-    max-width: none;
-    max-height: none;
-}
