--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,11 +61,6 @@ body {
         bottom: 16px;
         border-radius: 50%;
         background-color: #ff5722;
-
-        img {
-            width: auto;
-            height: 24px;
-        }
     }
 
     .cc-window {
@@ -207,13 +202,6 @@ mat-select-trigger {
             margin-left: 8px;
         }
     }
-}
-
-img {
-    width: auto;
-    height: auto;
-    max-height: 40px;
-    max-width: 60px;
 }
 
 h3 {
